[workspace]
members = [
    "contracts/dex-factory",
    "contracts/pool-constant-product",
    "tests",
]
resolver = "2"

[workspace.package]
name = "dopple-dex-workspace"
version = "0.1.0"
edition = "2021"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

# --- Define common dependencies for the workspace ---
[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_1_4"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cw-utils = "2.0.0"
prost = "0.11"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-multi-test = "2.0.0"
anyhow = "1.0"