[workspace]
resolver = "2"
members = [
  "dex_pool_program",
  "constant_product_plugin",
  "tests"
]

[workspace.dependencies]
solana-program = "2.2"
borsh = "0.10.3"
spl-token = { version = "7.0.0" }
spl-associated-token-account = { version = "3.0.2" }
spl-math = { version = "0.3.0" }
spl-memo = { version = "4.0.0" }
litesvm = "0.6.1"
solana-program-test = "2.2"
solana-sdk = "2.2"
thiserror = "1.0"
bincode = "1.3.3"
