[package]
name = "dex-factory"
version = "0.1.0"
authors = ["rustopian <pete@obi.money>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
prost = { workspace = true } # Needed for reply parsing
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }